<resources>
    <string name="app_name">Movies &amp; TV Shows Explorer</string>
    <string name="movies">Movies</string>
    <string name="tb_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="watch">Watch Next</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="guest">Do not want to create an account</string>
    <string name="login">Log In</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="email_address">Email Address</string>
    <string name="do_not_have_an_account">Don´t have an account?</string>
    <string name="register">Register</string>
    <string name="watch_next">Watch Next</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_as_a_guest">Enter as a guest</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="wait_message">Please wait.<br/>We are collecting information for you</string>
    <string name="password_information">Password must have between 8 and 16 characters.</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="navigate_to_welcome_screen">Go to welcome screen</string>
    <string name="email">Email</string>
    <string name="password_requirements">Password requirements</string>
    <string name="password_requirements_ok">Password fills the requirements</string>
    <string name="name_requirements">Name requirements are checked</string>
    <string name="hello_there_welcome_back">Hello there! Welcome back</string>
    <string name="reset_password">Reset password</string>
    <string name="application_logo">Application logo</string>
</resources>