<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ools="http://schemas.android.com/tools"
    android:id="@+id/welcomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ools:context=".app.presentation.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/standard_margin"
        android:rotation="25"
        android:src="@mipmap/ic_cover_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/application_logo"/>

    <TextView
        android:id="@+id/text_movies_and_tv_shows"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_standard_margin"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="@dimen/standard_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_cover"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/button_login_welcome_activity"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:text="@string/login"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/text_movies_and_tv_shows"
        app:layout_constraintVertical_bias="0.25"
        android:layout_margin="@dimen/standard_margin"/>

    <Button
        android:id="@+id/button_register_welcome_activity"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:text="@string/register"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/text_movies_and_tv_shows"
        app:layout_constraintVertical_bias="0.25"
        android:layout_margin="@dimen/standard_margin"/>

    <TextView
        android:id="@+id/text_do_not_want_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_standard_margin"
        android:layout_marginStart="@dimen/double_standard_margin"
        android:text="@string/guest"
        android:textAlignment="textStart"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintTop_toBottomOf="@id/button_login_welcome_activity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_enter_as_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_as_a_guest"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="@dimen/standard_padding"
        android:layout_marginTop="@dimen/double_standard_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toEndOf="@+id/text_do_not_want_to_register"
        app:layout_constraintTop_toBottomOf="@id/button_login_welcome_activity"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>