<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/button_go_back_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/navigate_to_welcome_screen"/>

    <TextView
        android:id="@+id/text_movies_and_tv_shows_register_activity"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/double_standard_margin"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="@dimen/standard_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/text_email_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginTop="@dimen/double_standard_margin"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_movies_and_tv_shows_register_activity"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/edit_email_register_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:layout_marginBottom="@dimen/double_standard_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_register_activity"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/name"/>

    <TextView
        android:id="@+id/text_password_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email_register_activity" />

    <ImageButton
        android:id="@+id/image_information"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@id/text_password_register_activity"
        app:layout_constraintStart_toEndOf="@id/text_password_register_activity"
        app:layout_constraintTop_toTopOf="@id/text_password_register_activity"
        android:contentDescription="@string/password_requirements"/>

    <EditText
        android:id="@+id/edit_password_register_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:layout_marginBottom="@dimen/double_standard_margin"
        android:inputType="textPassword"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_register_activity"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:hint="@string/password"
        android:autofillHints="@string/password"/>

    <ImageView
        android:id="@+id/check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        android:src="@drawable/ic_check"
        app:layout_constraintTop_toTopOf="@id/edit_password_register_activity"
        app:layout_constraintBottom_toBottomOf="@id/edit_password_register_activity"
        android:visibility="invisible"
        android:contentDescription="@string/password_requirements_ok"/>

    <TextView
        android:id="@+id/text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_register_activity"
        />

    <EditText
        android:id="@+id/edit_confirm_password_register_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:layout_marginBottom="@dimen/double_standard_margin"
        android:inputType="textPassword"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_confirm_password"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:hint="@string/confirm_password"
        android:autofillHints="@string/confirm_password"/>

    <ImageView
        android:id="@+id/check_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        android:src="@drawable/ic_check"
        app:layout_constraintTop_toTopOf="@id/edit_confirm_password_register_activity"
        app:layout_constraintBottom_toBottomOf="@id/edit_confirm_password_register_activity"
        android:visibility="invisible"
        android:contentDescription="@string/password_requirements_ok"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_confirm_password_register_activity" />

    <EditText
        android:id="@+id/edit_name_register_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/double_standard_margin"
        android:layout_marginRight="@dimen/double_standard_margin"
        android:layout_marginBottom="@dimen/double_standard_margin"
        android:inputType="text"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:hint="@string/name"
        android:autofillHints="@string/name"/>

    <ImageView
        android:id="@+id/check_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        android:src="@drawable/ic_check"
        app:layout_constraintTop_toTopOf="@id/edit_name_register_activity"
        app:layout_constraintBottom_toBottomOf="@id/edit_name_register_activity"
        android:visibility="invisible"
        android:contentDescription="@string/name_requirements"/>

    <Button
        android:id="@+id/button_register_register_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/double_standard_margin"
        android:alpha="1"
        android:text="@string/register"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name_register_activity" />

    <TextView
        android:id="@+id/text_do_not_have_account_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/already_have_an_account"
        android:textAlignment="textStart"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register_register_activity" />

    <TextView
        android:id="@+id/text_login_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="2dp"
        android:text="@string/login"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_do_not_have_account_register_activity"
        app:layout_constraintTop_toBottomOf="@id/button_register_register_activity" />

    <TextView
        android:id="@+id/text_do_not_want_to_register_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_standard_margin"
        android:layout_marginTop="@dimen/double_standard_margin"
        android:text="@string/guest"
        android:textAlignment="textStart"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_do_not_have_account_register_activity" />

    <TextView
        android:id="@+id/text_enter_as_guest_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_standard_margin"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="2dp"
        android:text="@string/enter_as_a_guest"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_do_not_want_to_register_register_activity"
        app:layout_constraintTop_toBottomOf="@id/text_do_not_have_account_register_activity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="360dp" />

</androidx.constraintlayout.widget.ConstraintLayout>