<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_movies_and_tv_shows"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_standard_margin"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="@dimen/standard_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_cover"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/standard_margin"
        android:src="@mipmap/ic_cover_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/application_logo"/>

    <TextView
        android:id="@+id/please_wait"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/wait_message"
        android:textAlignment="textStart"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_cover" />

</androidx.constraintlayout.widget.ConstraintLayout>