<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/movies_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_popular_movies"
        android:textSize="@dimen/standard_title_size"
        android:text="@string/popular"
        android:paddingBottom="@dimen/standard_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="@dimen/standard_padding"
        android:background="?attr/colorPrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular_movies"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/text_popular_movies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/standard_margin"
        tools:listitem="@layout/movies_item"/>

    <TextView
        android:id="@+id/text_top_rated_movies"
        android:textSize="@dimen/standard_title_size"
        android:text="@string/top_rated"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@+id/rv_popular_movies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top_rated_movies"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/text_top_rated_movies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/standard_margin"
        tools:listitem="@layout/movies_item"/>

    <TextView
        android:id="@+id/text_upcoming_movies"
        android:textSize="@dimen/standard_title_size"
        android:text="@string/upcoming"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/rv_top_rated_movies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_movies"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/text_upcoming_movies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/standard_margin"
        tools:listitem="@layout/movies_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>